Fixed overflow x in body in movie_book page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,7 @@
 
 body {
   height: 100vh;
+  overflow-x: hidden !important;
 }
 
 .banner {
