--- a/static/css/movie_book.css
+++ b/static/css/movie_book.css
@@ -10,6 +10,7 @@ body {
   color: white;
   min-height: 100vh;
   padding: 20px;
+  overflow-x: hidden !important;
 }
 
 .step {
